Adm registra lote

--- a/config/locales/lazy.pt-BR.yml
+++ b/config/locales/lazy.pt-BR.yml
@@ -1,4 +1,8 @@
 pt-BR:
   auction_items:
     new:
-      register: 'Registrar'
+      register: Registrar
+    
+  lots:
+    new:
+      register: Registrar
