Usuário vê detalhe de um lote

--- a/config/locales/lazy.pt-BR.yml
+++ b/config/locales/lazy.pt-BR.yml
@@ -9,6 +9,6 @@ pt-BR:
     
     status_track:
       pending: 'Aguardando aprovação'
-      running: 'Em disputa'
+      approved: 'Em disputa'
       canceled: 'Cancelado'
       closed: 'Encerrado'
